@@ -5,9 +5,11 @@ import com.kurtlar.konseyi.freelancerclone.domain.dto.TechnologyDto;
 import com.kurtlar.konseyi.freelancerclone.domain.entity.Job;
 import com.kurtlar.konseyi.freelancerclone.domain.repository.JobRepository;
 import com.kurtlar.konseyi.freelancerclone.domain.service.JobService;
+import com.kurtlar.konseyi.freelancerclone.domain.service.OfferService;
 import com.kurtlar.konseyi.freelancerclone.domain.service.TechnologyService;
 import com.kurtlar.konseyi.freelancerclone.domain.service.mapper.JobMapper;
 import com.kurtlar.konseyi.freelancerclone.library.exception.ResourceNotFoundException;
+import com.kurtlar.konseyi.freelancerclone.library.utils.CreatePageable;
 import com.kurtlar.konseyi.freelancerclone.library.utils.CreateSort;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
@@ -16,22 +18,25 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
+import java.util.stream.Collectors;
+
 @Service
 @RequiredArgsConstructor
 public class JobServiceImpl implements JobService {
 
     private final JobRepository repository;
     private final TechnologyService technologyService;
+    private final OfferService offerService;
 
     @Override
     public JobDto save(JobDto jobDto) {
         Job job = repository.save(JobMapper.toEntity(new Job(), jobDto));
-        return JobMapper.toDto(job, technologyService);
+        return JobMapper.toDto(job, technologyService ,offerService);
     }
 
     @Override
     public JobDto getById(String jobId) {
-        return repository.findById(jobId).map(job -> JobMapper.toDto(job,technologyService)).orElseThrow(
+        return repository.findById(jobId).map(job -> JobMapper.toDto(job,technologyService ,offerService)).orElseThrow(
                 () -> new ResourceNotFoundException(Job.class.getSimpleName(), "id", jobId)
         );
     }
@@ -40,7 +45,7 @@ public class JobServiceImpl implements JobService {
     public JobDto update(String jobId, JobDto jobDto) {
         Job job = repository.findById(jobId).orElseThrow(
                 () -> new ResourceNotFoundException(Job.class.getSimpleName(), "id", jobId));
-        return JobMapper.toDto(repository.save(setJob(job, jobDto)),technologyService);
+        return JobMapper.toDto(repository.save(setJob(job, jobDto)),technologyService,offerService);
     }
 
     @Override
@@ -52,12 +57,27 @@ public class JobServiceImpl implements JobService {
     }
 
     @Override
+    public Page<JobDto> getAllJobs(String pageNumber, String pageSize, String sortBy, String sortDir) {
+        Sort sort = CreateSort.generateSort(sortBy, sortDir);
+        Pageable pageable = CreatePageable.createPageable(pageNumber, pageSize, sort);
+
+        return repository.findAll(pageable).map(job -> JobMapper.toDto(job,technologyService,offerService));
+    }
+
+    @Override
+    public Job getEntityById(String jobId) {
+        return repository.findById(jobId).orElseThrow(
+                () -> new ResourceNotFoundException(Job.class.getSimpleName(), "id", jobId)
+        );
+    }
+
+    @Override
     public Page<JobDto> getAllJobsByOwner(String ownerId , String pageNumber, String pageSize , String  sortBy , String sortDir) {
         Sort sort = CreateSort.generateSort(sortBy, sortDir);
 
         Pageable pageable = PageRequest.of(Integer.parseInt(pageNumber), Integer.parseInt(pageSize), sort);
 
-        return repository.findAll(pageable).map(job -> JobMapper.toDto(job,technologyService));
+        return repository.findAll(pageable).map(job -> JobMapper.toDto(job,technologyService,offerService));
     }
 
     @Override
@@ -66,8 +86,10 @@ public class JobServiceImpl implements JobService {
 
         Pageable pageable = PageRequest.of(Integer.parseInt(pageNumber), Integer.parseInt(pageSize), sort);
 
-        return repository.findAll(pageable).map(job -> JobMapper.toDto(job,technologyService));
+        return repository.findAll(pageable).map(job -> JobMapper.toDto(job,technologyService,offerService));
     }
+
+
 
 
     public Job setJob(Job job ,JobDto jobDto){
@@ -77,13 +99,8 @@ public class JobServiceImpl implements JobService {
         job.setDescription(jobDto.getDescription());
         job.setSalary(jobDto.getSalary());
         job.setStatus(jobDto.getStatus());
-        job.setOwnerId(jobDto.getOwnerId());
         job.setWorkerId(jobDto.getWorkerId());
-        job.setOffers(jobDto.getOffers());
-        job.setTechnologies(jobDto.getTechnologies()
-                .stream()
-                .map(TechnologyDto::getId)
-                .toList());
+        job.setTechnologies(jobDto.getTechnologies().stream().map(technologyDto ->technologyDto.getId()).collect(Collectors.toList()));
         return job;
     }
 }
